--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
   <script src="js/services.js"></script>
   <script src="js/directives.js"></script>
 </head>
-<body>
+<body ng-controller="rootCtrl">
   <header>
     <div class="top-navbar">
       <ul class="nav nav-pills nav-justified">
