article styles added

--- a/app/index.html
+++ b/app/index.html
@@ -27,8 +27,8 @@
   <header>
     <div class="top-navbar">
       <ul class="nav nav-pills nav-justified">
-        <li><a href="http://localhost:63342/CRUD/app/#/">Home</a></li>
-        <li><a href="http://localhost:63342/CRUD/app/index.html#/likes">Favourites <span class="badge">{{storageLength}}</span></a></li>
+        <li><a href="http://localhost:63343/CRUD/app/#/">Home</a></li>
+        <li><a href="http://localhost:63343/CRUD/app/index.html#/saves">Favourites</a></li>
         <li><a href="#">Reserved</a></li>
       </ul>
     </div>
