search api included

--- a/app/index.html
+++ b/app/index.html
@@ -27,25 +27,21 @@
   <header>
     <div class="top-navbar">
       <ul class="nav nav-pills nav-justified">
-        <li><a href="http://localhost:63343/CRUD/app/#/">Search</a></li>
-        <li><a href="http://localhost:63343/CRUD/app/index.html#/saves">Bookmarks</a></li>
+        <li><a href="http://localhost:63342/CRUD/app/#/">Search</a></li>
+        <li><a href="http://localhost:63342/CRUD/app/index.html#/saves">Bookmarks</a></li>
         <li><a href="#">Reserved</a></li>
       </ul>
     </div>
+
+    <img class="nyt" width="379px" height="64px" src="http://a1.nyt.com/assets/homepage/20151123-033227/images/foundation/logos/nyt-logo-379x64.png" alt="The New Your"/>
+
   </header>
 
   <main>
 
-
     <div ng-view>
 
-
-
     </div>
-
-    <article>
-
-    </article>
 
   </main>
 
