--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/animations.css">
 
   <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -46,7 +46,9 @@
   </main>
 
   <footer>
-
+    <div class="grid-960">
+      <p>&copy; 2015 Developed by <span class="developer">nicolasMazuryk</span></p>
+    </div>
   </footer>
 
 
