--- a/app/index.html
+++ b/app/index.html
@@ -47,10 +47,11 @@
 
   <footer>
     <div class="grid-960">
-      <p>&copy; 2015 Developed by <span class="developer">nicolasMazuryk</span></p>
+      <p>&copy; 2015 Developed by <a href="https://ua.linkedin.com/in/nicolasmazuryk" class="developer" target="_blank">nicolasMazuryk</a></p>
     </div>
   </footer>
 
+  <div loader></div>
 
 </body>
 </html>
