--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <div class="top-navbar">
       <ul class="nav nav-pills nav-justified">
         <li><a href="http://localhost:63342/CRUD/app/#/">Search</a></li>
-        <li><a href="http://localhost:63342/CRUD/app/index.html#/saves">Bookmarks</a></li>
+        <li><a href="http://localhost:63342/CRUD/app/#/saves">Bookmarks</a></li>
         <li><a href="#">Reserved</a></li>
       </ul>
     </div>
@@ -61,3 +61,10 @@
 
 <!-- npm start - to start server -->
 <!-- git checkout -f step-12 -->
+
+<!-- function to render images ( 2 h )-->
+<!-- sort by ownership -->
+<!-- animation when render -->
+
+
+<!-- Learn more ->icon -->
