css change start

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,8 @@
       </ul>
     </div>
 
-    <img class="nyt" width="379px" height="64px" src="http://a1.nyt.com/assets/homepage/20151123-033227/images/foundation/logos/nyt-logo-379x64.png" alt="The New Your"/>
+    <!--<img class="nyt" width="379px" height="64px" src="http://a1.nyt.com/assets/homepage/20151123-033227/images/foundation/logos/nyt-logo-379x64.png" alt="The New Your"/>-->
+    <img class="nyt" src="img/4.png" alt="The New Your"/>
 
   </header>
 
