--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
   <header>
     <div class="top-navbar">
       <ul class="nav nav-pills nav-justified">
-        <li><a href="https://crud-it.herokuapp.com/">Search</a></li>
-        <li><a href="https://crud-it.herokuapp.com/saves">Bookmarks</a></li>
+        <li><a href="https://crud-it.herokuapp.com/#/">Search</a></li>
+        <li><a href="https://crud-it.herokuapp.com/#/saves">Bookmarks</a></li>
         <li><a href="#">Reserved</a></li>
       </ul>
     </div>
