--- a/app/index.html
+++ b/app/index.html
@@ -2,37 +2,88 @@
 <html lang="en" ng-app="crudApp">
 <head>
   <meta charset="utf-8">
-  <title>Crud iT!</title><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <title>Crud iT!</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+
   <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../node_modules/angular-material/angular-material.min.css"/>
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/animations.css">
 
 </head>
-<body>
-  <header>
-    <div class="top-navbar">
-      <ul class="nav nav-pills nav-justified">
-        <!--<li><a href="https://crud-it.herokuapp.com/#/">Search</a></li>-->
-        <!--<li><a href="https://crud-it.herokuapp.com/#/saves">Bookmarks</a></li>-->
-        <li><a href="http://localhost:4000/#/">Search</a></li>
-        <li><a href="http://localhost:4000/#/saves">Bookmarks</a></li>
-        <li><a href="#">Reserved</a></li>
-      </ul>
+<body ng-cloak layout="column" ng-controller="BodyCtrl">
+
+  <md-toolbar>
+    <div class="md-toolbar-tools" flex layout="row" >
+      <md-button class="md-icon-button" aria-label="Menu" >
+        <md-icon md-svg-icon="img/menu13.svg" ng-click="toggleSideNav('sidenavRight')"></md-icon>
+      </md-button>
+      <h2>
+        <span>The New York Times</span>
+      </h2>
+      <a href="/">
+        <img class="logo" src="img/4.png" alt="Logo"/>
+      </a>
     </div>
+  </md-toolbar>
 
-    <!--<img class="nyt" width="379px" height="64px" src="http://a1.nyt.com/assets/homepage/20151123-033227/images/foundation/logos/nyt-logo-379x64.png" alt="The New Your"/>-->
-    <img class="nyt" src="img/4.png" alt="The New Your"/>
+  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="sidenavRight">
+    <md-toolbar class="md-theme-light">
+      <h1 class="md-toolbar-tools">Menu</h1>
+    </md-toolbar>
+    <md-content ng-controller="SideNavCtrl" layout-padding>
+      <form>
+        <md-input-container>
+          <label for="testInput">Test input</label>
+          <input type="text" id="testInput"
+                 ng-model="data" md-autofocus>
+        </md-input-container>
+      </form>
 
-  </header>
+      <md-button ng-click="close('sidenavRight')" class="md-primary">
+        Close
+      </md-button>
 
-  <main>
+      <md-list>
+        <md-list-item>
+          <a class="menu__item" href="http://localhost:8080/app/#/">
+            <img src="img/icon-edit.png" alt=""/>
+            <p>Home</p>
+          </a>
+        </md-list-item>
+        <md-list-item>
+          <a class="menu__item" href="http://localhost:8080/app/#/saves">
+            <img src="img/icon-like.png" alt=""/>
+            <p>Bookmarks</p>
+          </a>
+        </md-list-item>
+      </md-list>
+    </md-content>
+  </md-sidenav>
 
-    <div ng-view>
+  <!--<header>-->
+    <!--<div class="top-navbar">-->
+      <!--<ul class="nav nav-pills nav-justified">-->
+        <!--&lt;!&ndash;<li><a href="https://crud-it.herokuapp.com/#/">Search</a></li>&ndash;&gt;-->
+        <!--&lt;!&ndash;<li><a href="https://crud-it.herokuapp.com/#/saves">Bookmarks</a></li>&ndash;&gt;-->
+        <!--<li><a href="http://localhost:8080/app/#/">Search</a></li>-->
+        <!--<li><a href="http://localhost:8080/app/#/saves">Bookmarks</a></li>-->
+        <!--<li><a href="#">Reserved</a></li>-->
+      <!--</ul>-->
+    <!--</div>-->
+    <!--&lt;!&ndash;<img class="nyt" width="379px" height="64px" src="http://a1.nyt.com/assets/homepage/20151123-033227/images/foundation/logos/nyt-logo-379x64.png" alt="The New Your"/>&ndash;&gt;-->
+    <!--&lt;!&ndash;<img class="nyt" src="img/4.png" alt="The New Your"/>&ndash;&gt;-->
+  <!--</header>-->
 
-    </div>
+  <main id="top">
+
+    <div ng-view></div>
 
   </main>
 
@@ -43,7 +94,7 @@
   </footer>
 
   <div class="top">
-    <i class="top__icon"></i>
+    <a href="#top" class="top__icon"></a>
   </div>
 
   <div loader></div>
@@ -57,6 +108,10 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
+
+  <script src="../node_modules/angular-aria/angular-aria.min.js"></script>
+  <script src="../node_modules/angular-messages/angular-messages.min.js"></script>
+  <script src="../node_modules/angular-material/angular-material.js"></script>
   <script src="js/app.js"></script>
   <script src="js/animations.js"></script>
   <script src="js/controllers.js"></script>
