--- a/app/index.html
+++ b/app/index.html
@@ -7,17 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-
+  <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
-  <link rel="stylesheet" href="../node_modules/angular-material/angular-material.min.css"/>
+  <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css"/>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/animations.css">
 
 </head>
-<body ng-cloak layout="column" ng-controller="BodyCtrl">
+<body ng-cloak ng-controller="BodyCtrl">
 
   <md-toolbar>
     <div class="md-toolbar-tools" flex layout="row" >
@@ -52,13 +52,15 @@
 
       <md-list>
         <md-list-item>
-          <a class="menu__item" href="http://localhost:8080/app/#/">
+          <!--<a class="menu__item" href="http://localhost:8080/app/#/">-->
+          <a class="menu__item" href="http://localhost:8080/#/">
             <img src="img/icon-edit.png" alt=""/>
             <p>Home</p>
           </a>
         </md-list-item>
         <md-list-item>
-          <a class="menu__item" href="http://localhost:8080/app/#/saves">
+          <!--<a class="menu__item" href="http://localhost:8080/app/#/saves">-->
+          <a class="menu__item" href="http://localhost:8080/#/saves">
             <img src="img/icon-like.png" alt=""/>
             <p>Bookmarks</p>
           </a>
@@ -109,9 +111,9 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
 
-  <script src="../node_modules/angular-aria/angular-aria.min.js"></script>
-  <script src="../node_modules/angular-messages/angular-messages.min.js"></script>
-  <script src="../node_modules/angular-material/angular-material.js"></script>
+  <script src="bower_components/angular-aria/angular-aria.min.js"></script>
+  <script src="bower_components/angular-messages/angular-messages.min.js"></script>
+  <script src="bower_components/angular-material/angular-material.js"></script>
   <script src="js/app.js"></script>
   <script src="js/animations.js"></script>
   <script src="js/controllers.js"></script>
@@ -130,3 +132,13 @@
 
 
 <!-- Learn more ->icon -->
+
+<!--https://wrapbootstrap.com/theme/material-admin-responsive-angularjs-WB011H985      -- admin panel on Angular Materials - features to review + dependancies -->
+<!--http://fuse-angular-material.withinpixels.com/dashboard-project-->
+<!--http://flatfull.com/themes/materil/angular/#/app/wall-->
+
+<!--http://daneden.github.io/animate.css/                 == animate.css -->
+<!--https://klarsys.github.io/angular-material-icons/     == svg-Morpheus -->
+
+
+
