--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 </head>
 <body ng-cloak ng-controller="BodyCtrl">
 
-<ng-include src="'partials/header_sidenav.tpl.html'"></ng-include>
+<ng-include src="'partials/header.tpl.html'"></ng-include>
 
   <!--<header>-->
     <!--<div class="top-navbar">-->
