--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
   <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500,700' rel='stylesheet' type='text/css'>-->
   <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="bower_components/Materialize/dist/css/materialize.min.css">
   <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
@@ -23,21 +22,7 @@
 
 <ng-include src="'partials/header.tpl.html'"></ng-include>
 
-  <!--<header>-->
-    <!--<div class="top-navbar">-->
-      <!--<ul class="nav nav-pills nav-justified">-->
-        <!--&lt;!&ndash;<li><a href="https://crud-it.herokuapp.com/#/">Search</a></li>&ndash;&gt;-->
-        <!--&lt;!&ndash;<li><a href="https://crud-it.herokuapp.com/#/saves">Bookmarks</a></li>&ndash;&gt;-->
-        <!--<li><a href="http://localhost:8080/app/#/">Search</a></li>-->
-        <!--<li><a href="http://localhost:8080/app/#/saves">Bookmarks</a></li>-->
-        <!--<li><a href="#">Reserved</a></li>-->
-      <!--</ul>-->
-    <!--</div>-->
-    <!--&lt;!&ndash;<img class="nyt" width="379px" height="64px" src="http://a1.nyt.com/assets/homepage/20151123-033227/images/foundation/logos/nyt-logo-379x64.png" alt="The New Your"/>&ndash;&gt;-->
-    <!--&lt;!&ndash;<img class="nyt" src="img/4.png" alt="The New Your"/>&ndash;&gt;-->
-  <!--</header>-->
-
-  <main id="top">
+  <main>
 
     <div ng-view></div>
 
@@ -45,13 +30,9 @@
 
   <footer>
     <div class="grid-960">
-      <p>&copy; 2015 Developed by <a href="https://ua.linkedin.com/in/nicolasmazuryk" class="developer" target="_blank">nicolasMazuryk</a></p>
+      <p>&copy; 2016 Developed by <a href="https://ua.linkedin.com/in/nicolasmazuryk" class="developer" target="_blank">nicolasMazuryk</a></p>
     </div>
   </footer>
-
-  <div class="top">
-    <a href="#top" class="top__icon"></a>
-  </div>
 
   <div loader></div>
 
@@ -62,37 +43,20 @@
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="bower_components/angular-spinkit/build/angular-spinkit.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
-  <!--<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>-->
   <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-<script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
+  <script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
   <script src="bower_components/angular-aria/angular-aria.min.js"></script>
   <script src="bower_components/angular-messages/angular-messages.min.js"></script>
   <script src="bower_components/angular-material/angular-material.min.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/animations.js"></script>
   <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
   <script src="js/directives.js"></script>
 </body>
 </html>
 
-<!-- npm start - to start server -->
-<!-- git checkout -f step-12 -->
-
-<!-- function to render images ( 2 h )-->
-<!-- sort by ownership -->
-<!-- animation when render -->
-
-
-<!-- Learn more ->icon -->
-
-<!--https://wrapbootstrap.com/theme/material-admin-responsive-angularjs-WB011H985      -- admin panel on Angular Materials - features to review + dependancies -->
-<!--http://fuse-angular-material.withinpixels.com/dashboard-project-->
-<!--http://flatfull.com/themes/materil/angular/#/app/wall-->
 
 <!--http://daneden.github.io/animate.css/                 == animate.css -->
-<!--https://klarsys.github.io/angular-material-icons/     == svg-Morpheus -->
 
 
 
